--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^3.7.0",
+    "react-paypal-express-checkout": "^1.0.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "react-spring": "^8.0.27",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
